# health-savings-account-manager

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_ROADMAP.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  test_openai_vector_store.py  user_stories.md
.claude/: architect.md  feature-dev.md  settings.json
.claude/agents/: code-diff-reviewer.md  devops.md  docker-containerization-specialist.md  reviewer.md  software-architect.md  test-generator-from-stories.md  tester.md  vertical-slice-implementer.md
.claude/commands/: devops.md  dry-run-next-us.md  implement.md  kickoff.md  mcp-wireup.md  review-standards.md  review.md  run-next-us.md  test.md
.claude/context/: CLAUDE.md  README.md  engineering.md  openai-model.md  openai.md  requirements.md  user_stories.md
.claude/hooks/: format-after-edit.sh
.github/: pull_request_template.md
backend/: .dockerignore  Dockerfile  __init__.py  init.sql  main.py  requirements.txt
backend/api/v1/: applications.py  decisions.py  documents.py  hsa_assistant.py  qa_old.py
backend/core/: __init__.py  config.py  database.py
backend/models/: __init__.py  application.py  document.py  hsa_assistant_history.py  qa_history.py
backend/schemas/: __init__.py  application.py  decision.py  document.py  hsa_assistant.py  qa.py
backend/services/: decision_engine.py  document_processor.py  openai_vector_store_service.py  rag_service.py
backend/tests/integration/: test_applications_api.py  test_decisions_api.py  test_documents_api.py  test_hsa_assistant_api.py  test_hsa_assistant_contract.py  test_hsa_assistant_database.py  test_hsa_assistant_openai_api.py  test_openai_e2e_workflow.py  test_qa_api.py  test_rag_performance.py
backend/tests/unit/: test_decision_engine.py  test_decision_engine_edge_cases.py  test_document_processor.py  test_hsa_assistant_schemas_validation.py  test_openai_vector_store_service.py  test_rag_service.py  test_schemas.py
data/knowledge_base/: HSA_FAQ.txt  HSA_Limits.txt
docs/architecture/: hsa_chat_bot_architecture.md
docs/features/: hsa_user_stories.md
docs/infrastructure/: OPENAI_SETUP.md  README.md  TEST_ANALYSIS_REPORT.md
frontend/: .dockerignore  .prettierrc.json  Dockerfile  TEST_COVERAGE_REPORT.md  TEST_FIXES_EXAMPLE.md  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/coverage/.tmp/: coverage-0.json  coverage-1.json  coverage-2.json  coverage-3.json  coverage-4.json  coverage-5.json  coverage-6.json  coverage-7.json  coverage-8.json  coverage-9.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ChatCTA.tsx  ChatInput.tsx  CitationCard.tsx  MessageActions.tsx  MessageBubble.tsx  MessageList.tsx  RichTextRenderer.tsx
frontend/src/components/forms/: PersonalInfoForm.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Toast.tsx
frontend/src/components/upload/: FileUploader.tsx
frontend/src/contexts/: ChatContext.tsx
frontend/src/contexts/__tests__/: ChatContext.test.tsx
frontend/src/pages/: ChatPage.tsx  DocumentUploadPage.tsx  PersonalInfoPage.tsx
frontend/src/pages/__tests__/: ChatPage.integration.test.tsx  ChatPage.test.tsx  ChatPage.userflow.test.tsx
frontend/src/services/: api.ts  applicationService.ts  documentService.ts  hsaAssistantService.ts
frontend/src/services/__tests__/: api-integration.test.ts  hsaAssistantService.test.ts
frontend/src/test/: setup.ts
frontend/src/types/: application.ts  document.ts  hsaAssistant.ts  index.ts
frontend/src/utils/: validation.ts
scripts/: select_next_us.py
(+13 files in other folders)
